Cleaning the code removing some new Integer(int)
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1981 a8e77078-a1c7-4fa5-b8fc-53c5178a176c